# Octus-case-study

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: streamlit_app.py
apps/: chainlit_app.py  streamlit_app.py
configs/: app.yaml  eval_grid.yaml  eval_questions.yaml  experiments.yaml  manual_mappings.yaml
docs/: architecture.md  decisions.md  simfin_metrics.md
notebooks/: 01_octus_data_audit.ipynb  02_octus_to_simfin_mapping.ipynb
scripts/: render_architecture.sh
src/agents/: consts.py  doc_agent.py  events.py  graph.py  orchestrator.py  router.py  runtime.py  simfin_agent.py  state.py  synthesis_agent.py  utils.py
src/app/: bootstrap.py  context.py  fingerprints.py  loader.py  locks.py  logging.py  settings.py
src/chunking/: base.py  heading_chunker.py  hybrid_chunker.py  recursive_chunker.py  sec_section_chunker.py  token_chunker.py
src/citations/: formatter.py  models.py
src/embeddings/: cache.py  embedder.py  mock_embedder.py  sentence_transformer_embedder.py
src/eval/: __main__.py  judge.py  models.py  pipeline.py  report.py  run_experiments.py  run_rag_eval.py  storage.py
src/ingest/: __main__.py  octus.py  simfin.py
src/octus/: dedupe.py  html_to_text.py  ingest.py  normalize.py  schemas.py
tests/: test_bm25_retriever.py  test_bootstrap_idempotent.py  test_chunkers.py  test_eval_pipeline.py  test_hybrid_retriever.py  test_octus_dedupe.py  test_octus_ingest.py  test_recursive_chunker.py  test_sec_section_chunker.py  test_simfin_realtime_cache.py  test_vectorstore_fallback.py
(+30 files in other folders)
